# harry-potter-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  harry-potter.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  LICENSE  README.md  REFERENCE.md  config.lua  features.lua  harry-potter.rockspec  (+2 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  harrypotter_sdk.py  harrypotter_types.py  pyproject.toml
py/core/: context.py  error.py  response.py  result.py  utility_type.py
py/entity/: character_entity.py  spell_entity.py
py/feature/: audit_feature.py  base_feature.py  cache_feature.py  debug_feature.py  idempotency_feature.py  proxy_feature.py  streaming_feature.py  telemetry_feature.py  test_feature.py
py/test/: runner.py  test_character_direct.py  test_character_entity.py  test_exists.py  test_feature.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_spell_direct.py  test_spell_entity.py
py/utility/: clean.py  done.py  feature_hook.py  feature_init.py  fetcher.py  make_context.py  make_fetch_def.py  make_request.py  make_spec.py  make_url.py  prepare_auth.py  prepare_body.py  prepare_headers.py  prepare_method.py  prepare_params.py  prepare_path.py  prepare_query.py  result_basic.py  transform_request.py  transform_response.py
(+433 files in other folders)
